--- a/practice/knife_fight.html
+++ b/practice/knife_fight.html
@@ -32,12 +32,12 @@
       <tbody>
       <tr>
         <td height="76" width="75">
-          <img src="/asset/i/border_lt.jpg" height="76" width="75"/>
+          <img src="/asset/i/border_lt.png" height="76" width="75"/>
         </td>
         <td class="bordert">
         </td>
         <td width="65">
-          <img src="/asset/i/border_tr.jpg" height="76" width="65"/>
+          <img src="/asset/i/border_tr.png" height="76" width="65"/>
         </td>
       </tr>
       <tr>
