--- a/practice/kungfu_eme_pai.html
+++ b/practice/kungfu_eme_pai.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Кунг фу Эмей Пай в Харькове</title>
+    <title>Кунг фу Эмэй Пай в Харькове</title>
     <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
 </head>
 <body>
