--- a/practice/index.html
+++ b/practice/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Кунг фу Эмей Пай, Ушу, Тайцзи цюань стиль чень, Цигун в Харькове</title>
+  <title>Кунг фу Эмэй Пай, Ушу, Тайцзи цюань стиль чень, Цигун в Харькове</title>
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
 </head>
 <body>
