--- a/practice/kungfu_eme_pai.html
+++ b/practice/kungfu_eme_pai.html
@@ -28,7 +28,7 @@
     <div class="header">
         <div class="title">
             <h1 class="h1MainTitle">
-                <a href="/">Харьковский культурный центр<br/>ИСКУССТВА КИТАЯ</a>
+                <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
             </h1>
             <div id="divFolowButtons">
                 <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
