--- a/photo/index.html
+++ b/photo/index.html
@@ -21,11 +21,8 @@
   <meta name="theme-color" content="#ffffff">
   <title>Фото китая и кунгфу эмэй пай, тайцзи цюань стиль чень, цигун</title>
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
-  <!-- jQuery 1.8 or later, 33 KB -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-  <!-- Fotorama from CDNJS, 19 KB -->
-  <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 </head>
 <body>
