--- a/practice/knife_fight.html
+++ b/practice/knife_fight.html
@@ -65,7 +65,7 @@
           <div id="menu">
             <ul class="menu">
               <li><a href="/practice/tai_chi_quan.html"><span>Тайцзи Цюань</span></a></li>
-              <li><a href="/practice/kungfu_eme_pai.html"><span>Эмэй Пай</span></a></li>
+              <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
               <li><a href="/practice/сhinese_tea_ceremony.html"><span>Чайная церемония</span></a></li>
