--- a/index.html
+++ b/index.html
@@ -559,19 +559,18 @@
 
               <div style="height: 10px;">
               </div>
-
-              <div id="divFounder">
-                <p><b class="importantText">
-                  Галица Александр Николаевич</b> 11 лет жил и работал в Китайской Народной Республике,
-                  много путешествовал по горным районам, где в даосских и буддийских храмах изучал
-                  древние методы китайской медицины оздоровления человека и боевые системы самозащиты.
-                  В 1989 году вернувшись в Украину организовал Харьковский культурный центр &laquo;Искусства
-                  Китая&raquo;. На сегодняшний день наш центр принял участие в нескольких международных
-                  проектах, посвященных оздоровлению человека. Его деятельность освещалась телеканалами
-                  в программах посвященных здоровому образу жизни в которых подчеркивалась эффективность
-                  и простота в освоении этих древних технологий оздоровления.</p>
-              </div>
             </div>
+            <p>
+              <b class="importantText">Галица Александр Николаевич</b> 11 лет жил и работал в Китайской Народной Республике,
+              много путешествовал по горным районам, где в даосских и буддийских храмах изучал
+              древние методы китайской медицины оздоровления человека и боевые системы самозащиты.
+            </p>
+            <p>
+              Вернувшись в Украину организовал Харьковский культурный центр &laquo;Искусства
+              Китая&raquo;. На&nbsp;сегодняшний день наш центр принял участие в нескольких международных
+              проектах, посвященных оздоровлению человека. Его деятельность освещалась телеканалами
+              в&nbsp;программах посвященных здоровому образу жизни в которых подчеркивалась эффективность
+              и простота в освоении этих древних технологий оздоровления.</p>
           </div>
         </td>
         <td class="borderright">
