--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
       <h1 class="h1MainTitle">
         <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
       </h1>
+      <div class="contact">
+        <a class="contact__item" href="tel:+380988314892">
+          <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
+          <span class="contact__text">+38(098)831-48-92</span>
+        </a>
+        <a class="contact__item" href="tel:+380661043335">
+          <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
+          <span class="contact__text">+38(066)104-33-35</span>
+        </a>
+        <a class="contact__item" href="viber://chat/?number=+380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
+        <a class="contact__item" href="whatsapp://send?abid=+380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
+        <a class="contact__item" href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
+        <a class="contact__item" href="mailto:kungfu@kungfu.com.ua">
+          <span class="contact__text">kungfu@kungfu.com.ua</span>
+        </a>
+      </div>
       <div id="divFolowButtons">
         <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
           <img src="/asset/i/youtube.png" alt="Youtube канал"/>
@@ -597,9 +613,7 @@
 </div>
 <div class="footer">
   <p>
-    Все права защищены и принадлежат школе<br/>
-    тел. +38(098)831-48-92, +38(066)104-33-35<br/>
-    email: kungfu@kungfu.com.ua<br/>
+    <small>&copy; Copyright Харьковский культурный Центр «Искусства Китая»</small>
   </p>
 </div>
 </body>
