--- a/practice/knife_fight.html
+++ b/practice/knife_fight.html
@@ -30,6 +30,22 @@
       <h1 class="h1MainTitle">
         <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
       </h1>
+      <div class="contact">
+        <a class="contact__item" href="tel:+380988314892">
+          <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
+          <span class="contact__text">+38(098)831-48-92</span>
+        </a>
+        <a class="contact__item" href="tel:+380661043335">
+          <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
+          <span class="contact__text">+38(066)104-33-35</span>
+        </a>
+        <a class="contact__item" href="viber://chat/?number=+380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
+        <a class="contact__item" href="whatsapp://send?abid=+380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
+        <a class="contact__item" href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
+        <a class="contact__item" href="mailto:kungfu@kungfu.com.ua">
+          <span class="contact__text">kungfu@kungfu.com.ua</span>
+        </a>
+      </div>
       <div id="divFolowButtons">
         <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
           <img src="/asset/i/youtube.png" alt="Youtube канал"/>
@@ -75,9 +91,6 @@
           </div>
           <div id="content">
             <h1 class="h1Title">Ножевой бой</h1>
-            <p style="text-align: center; font-weight: bold;">
-              Тел. +38(066)104-33-35, +38(098)831-48-92
-            </p>
             <p>Владение китайской техникой ножевого боя позволяет в экстремальной ситуации грамотно защитить свое здоровье и жизнь,
               не нанося оппоненту опасных для жизни травм и увечий, а только причиняя ему значительные болевые ощущения, приводящие к ограничению подвижности,
               осознаю своей беспомощности и снижению уровня агрессии.</p>
@@ -108,9 +121,7 @@
 </div>
 <div class="footer">
   <p>
-    Все права защищены и принадлежат школе<br/>
-    тел. +38(098)831-48-92, +38(066)104-33-35<br/>
-    email: kungfu@kungfu.com.ua<br/>
+    <small>&copy; Copyright Харьковский культурный Центр «Искусства Китая»</small>
   </p>
 </div>
 </body>
