--- a/practice/сhinese_tea_ceremony.html
+++ b/practice/сhinese_tea_ceremony.html
@@ -28,8 +28,24 @@
     <div class="header">
         <div class="title">
             <h1 class="h1MainTitle">
-                <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
-            </h1>
+        <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
+      </h1>
+      <div class="contact">
+        <a class="contact__item" href="tel:+380988314892">
+          <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
+          <span class="contact__text">+38(098)831-48-92</span>
+        </a>
+        <a class="contact__item" href="tel:+380661043335">
+          <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
+          <span class="contact__text">+38(066)104-33-35</span>
+        </a>
+        <a class="contact__item" href="viber://chat/?number=+380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
+        <a class="contact__item" href="whatsapp://send?abid=+380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
+        <a class="contact__item" href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
+        <a class="contact__item" href="mailto:kungfu@kungfu.com.ua">
+          <span class="contact__text">kungfu@kungfu.com.ua</span>
+        </a>
+      </div>
             <div id="divFolowButtons">
                 <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
                     <img src="/asset/i/youtube.png" alt="Youtube канал"/>
@@ -75,16 +91,12 @@
                     </div>
                     <div id="content">
                         <h1 class="h1Title">Китайская чайная церемония</h1>
-                        <p style="text-align: center; font-weight: bold;">
-                            Тел. +38(066)104-33-35, +38(098)831-48-92
-                        </p>
                         <p>
                             Помогает настроиться на созерцательный лад, забыть о повседневной суете и привести
                             к гармонии взаимоотношения со своими близкими, поделиться с другими спокойствием
                             и душевным равновесием
                         </p>
                         <br />
-
                         <div style="text-align: center;">
                             <iframe width="740" height="480" src="https://www.youtube.com/embed/hl6nuwdqri8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <iframe width="740" height="480" src="https://www.youtube.com/embed/R5YZs1iiJ9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -117,9 +129,7 @@
 </div>
 <div class="footer">
     <p>
-        Все права защищены и принадлежат школе<br/>
-        тел. +38(098)831-48-92, +38(066)104-33-35<br/>
-        email: kungfu@kungfu.com.ua<br/>
+        <small>&copy; Copyright Харьковский культурный Центр «Искусства Китая»</small>
     </p>
 </div>
 </body>
