update video of knife fight

--- a/practice/knife_fight.html
+++ b/practice/knife_fight.html
@@ -94,7 +94,7 @@
             <p>Владение китайской техникой ножевого боя позволяет в экстремальной ситуации грамотно защитить свое здоровье и жизнь,
               не нанося оппоненту опасных для жизни травм и увечий, а только причиняя ему значительные болевые ощущения, приводящие к ограничению подвижности,
               осознаю своей беспомощности и снижению уровня агрессии.</p>
-            <iframe width="740" height="480" src="https://www.youtube.com/embed/CwIz4vdtl9c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="740" height="480" src="https://www.youtube.com/embed/rS206tYbJoA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </td>
         <td class="borderright">
