--- a/practice/tai_chi_quan.html
+++ b/practice/tai_chi_quan.html
@@ -39,8 +39,8 @@
           <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
           <span class="contact__text">+38(066)104-33-35</span>
         </a>
-        <a class="contact__item" href="viber://chat/?number=+380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
-        <a class="contact__item" href="whatsapp://send?abid=+380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
+        <a class="contact__item" href="viber://chat/?number=380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
+        <a class="contact__item" href="https://wa.me/380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
         <a class="contact__item" href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
         <a class="contact__item" href="mailto:kungfu@kungfu.com.ua">
           <span class="contact__text">kungfu@kungfu.com.ua</span>
