--- a/photo/index.html
+++ b/photo/index.html
@@ -24,6 +24,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-29701804-1');
+  </script>
 </head>
 <body>
 <div class="pageHeader"></div>
@@ -267,18 +275,4 @@
   </p>
 </div>
 </body>
-<script type="text/javascript">
-  var _gaq = _gaq || []
-  _gaq.push(['_setAccount', 'UA-29701804-1'])
-  _gaq.push(['_trackPageview']);
-
-  (function () {
-    var ga = document.createElement('script')
-    ga.type = 'text/javascript'
-    ga.async = true
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'
-    var s = document.getElementsByTagName('script')[0]
-    s.parentNode.insertBefore(ga, s)
-  })()
-</script>
 </html>
