--- a/practice/kungfu_eme_pai.html
+++ b/practice/kungfu_eme_pai.html
@@ -21,6 +21,14 @@
   <meta name="theme-color" content="#ffffff">
     <title>Кунг фу Эмэй Пай в Харькове</title>
     <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-29701804-1');
+  </script>
 </head>
 <body>
 <div class="pageHeader"></div>
@@ -143,18 +151,4 @@
     </p>
 </div>
 </body>
-<script type="text/javascript">
-    var _gaq = _gaq || []
-    _gaq.push(['_setAccount', 'UA-29701804-1'])
-    _gaq.push(['_trackPageview']);
-
-    (function () {
-        var ga = document.createElement('script')
-        ga.type = 'text/javascript'
-        ga.async = true
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'
-        var s = document.getElementsByTagName('script')[0]
-        s.parentNode.insertBefore(ga, s)
-    })()
-</script>
 </html>
