--- a/article/meditation.html
+++ b/article/meditation.html
@@ -58,10 +58,10 @@
                 <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
                     <img src="/asset/i/youtube.png" alt="Youtube канал"/>
                 </a>
-                <a href="http://vk.com/club21359024" target="_blank">
+                <a href="https://vk.com/club21359024" target="_blank">
                     <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
                 </a>
-                <a href="http://www.facebook.com/profile.php?id=100001753134734" target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=100001753134734" target="_blank">
                     <img src="/asset/i/fb.png" alt="Страница Facebook"/>
                 </a>
             </div>
