--- a/article/meditation.html
+++ b/article/meditation.html
@@ -88,7 +88,7 @@
                 <td class="main">
                     <div id="menu">
                         <ul class="menu">
-                            <li><a href="/practice/tai_chi_quan.html"><span>Тайцзи Цюань</span></a></li>
+                            <li><a href="/practice/tai_chi_quan.html"><span>Тайцзицюань</span></a></li>
                             <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
                             <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
                             <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
