--- a/practice/tai_chi_quan.html
+++ b/practice/tai_chi_quan.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-    <title>Тайцзи Цюань в Харькове</title>
+    <title>Тайцзицюань в Харькове</title>
     <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
@@ -88,7 +88,7 @@
                 <td class="main">
                     <div id="menu">
                         <ul class="menu">
-                            <li><a href="/practice/tai_chi_quan.html"><span>Тайцзи Цюань</span></a></li>
+                            <li><a href="/practice/tai_chi_quan.html"><span>Тайцзицюань</span></a></li>
                             <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
                             <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
                             <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
@@ -98,7 +98,7 @@
                         </ul>
                     </div>
                     <div id="content">
-                        <h1 class="h1Title">Тайцзи Цюань</h1>
+                        <h1 class="h1Title">Тайцзицюань</h1>
                         <p>
                             В переводе с китайского - Гимнастика Великого Предела возникла из оздоровительных
                             практик древней китайской медицины, таких как Даоинь, Туна и Цигун, в которых делался
