--- a/article/index.html
+++ b/article/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Кунг фу Эмэй Пай, Ушу, Тайцзи цюань стиль чень, Цигун в Харькове</title>
+  <title>Кунг фу Эмэй Пай, Ушу, Тайцзицюань стиль чень, Цигун в Харькове</title>
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
@@ -88,7 +88,7 @@
         <td class="main">
           <div id="menu">
             <ul class="menu">
-              <li><a href="/practice/tai_chi_quan.html"><span>Тайцзи Цюань</span></a></li>
+              <li><a href="/practice/tai_chi_quan.html"><span>Тайцзицюань</span></a></li>
               <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
