--- a/photo/index.html
+++ b/photo/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Фото китая и кунгфу эмэй пай, тайцзи цюань стиль чень, цигун</title>
+  <title>Фото китая и кунгфу эмэй пай, Тайцзицюань стиль чень, цигун</title>
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -91,7 +91,7 @@
         <td class="main">
           <div id="menu">
             <ul class="menu">
-              <li><a href="/practice/tai_chi_quan.html"><span>Тайцзи Цюань</span></a></li>
+              <li><a href="/practice/tai_chi_quan.html"><span>Тайцзицюань</span></a></li>
               <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
