open contact link in new page

--- a/index.html
+++ b/index.html
@@ -42,18 +42,30 @@
         <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
       </h1>
       <div class="contact">
-        <a class="contact__item" href="tel:+380988314892">
+        <a class="contact__item"
+           target="_blank"
+           href="tel:+380988314892">
           <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
           <span class="contact__text">+38(098)831-48-92</span>
         </a>
-        <a class="contact__item" href="tel:+380661043335">
+        <a class="contact__item"
+           target="_blank"
+           href="tel:+380661043335">
           <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
           <span class="contact__text">+38(066)104-33-35</span>
         </a>
-        <a class="contact__item" href="viber://chat/?number=380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
-        <a class="contact__item" href="https://wa.me/380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
-        <a class="contact__item" href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
-        <a class="contact__item" href="mailto:kungfu@kungfu.com.ua">
+        <a class="contact__item"
+           target="_blank"
+           href="viber://chat/?number=380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
+        <a class="contact__item"
+           target="_blank"
+           href="https://wa.me/380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
+        <a class="contact__item"
+           target="_blank"
+           href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
+        <a class="contact__item"
+           target="_blank"
+           href="mailto:kungfu@kungfu.com.ua">
           <span class="contact__text">kungfu@kungfu.com.ua</span>
         </a>
       </div>
