--- a/practice/tai_chi_quan.html
+++ b/practice/tai_chi_quan.html
@@ -134,7 +134,7 @@
                         <p>
                             Подобно черепахе привлекает ци к корню души лин.
                         </p>
-                        <iframe width="750" height="480" src="https://www.youtube.com/embed/PRbB5u2sw9k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="750" height="480" src="https://www.youtube.com/embed/-M4zSrpqLnc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </td>
                 <td class="borderright">
