add track action

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
     gtag('config', 'UA-29701804-1');
   </script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+  <script src="/asset/script.js"></script>
 </head>
 <body>
 <div class="pageHeader"></div>
@@ -43,40 +41,52 @@
       </h1>
       <div class="contact">
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "kyivstar", "label": "phone"}'
            target="_blank"
            href="tel:+380988314892">
           <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
           <span class="contact__text">+38(098)831-48-92</span>
         </a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "vodafone", "label": "phone"}'
            target="_blank"
            href="tel:+380661043335">
           <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
           <span class="contact__text">+38(066)104-33-35</span>
         </a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "viber", "label": "messager"}'
            target="_blank"
            href="viber://chat/?number=380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "whatsapp", "label": "messager"}'
            target="_blank"
            href="https://wa.me/380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "telegram", "label": "messager"}'
            target="_blank"
            href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "mail", "label": "messager"}'
            target="_blank"
            href="mailto:kungfu@kungfu.com.ua">
           <span class="contact__text">kungfu@kungfu.com.ua</span>
         </a>
       </div>
       <div id="divFolowButtons">
-        <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
+        <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos"
+           data-action='{"category": "contact", "value": "youtube", "label": "youtube"}'
+           target="_blank">
           <img src="/asset/i/youtube.png" alt="Youtube канал"/>
         </a>
-        <a href="https://vk.com/club21359024" target="_blank">
+        <a href="https://vk.com/club21359024"
+           data-action='{"category": "contact", "value": "vk", "label": "vk"}'
+           target="_blank">
           <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
         </a>
-        <a href="https://www.facebook.com/profile.php?id=100001753134734" target="_blank">
+        <a href="https://www.facebook.com/profile.php?id=100001753134734"
+           data-action='{"category": "contact", "value": "facebook", "label": "facebook"}'
+           target="_blank">
           <img src="/asset/i/fb.png" alt="Страница Facebook"/>
         </a>
       </div>
