--- a/practice/kungfu_eme_pai.html
+++ b/practice/kungfu_eme_pai.html
@@ -29,133 +29,145 @@
 
     gtag('config', 'UA-29701804-1');
   </script>
+  <script src="/asset/script.js"></script>
 </head>
 <body>
 <div class="pageHeader"></div>
 <div class="page">
-    <div class="header">
-        <div class="title">
-            <h1 class="h1MainTitle">
+  <div class="header">
+    <div class="title">
+      <h1 class="h1MainTitle">
         <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
       </h1>
       <div class="contact">
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "kyivstar", "label": "phone"}'
            target="_blank"
            href="tel:+380988314892">
           <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
           <span class="contact__text">+38(098)831-48-92</span>
         </a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "vodafone", "label": "phone"}'
            target="_blank"
            href="tel:+380661043335">
           <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
           <span class="contact__text">+38(066)104-33-35</span>
         </a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "viber", "label": "messager"}'
            target="_blank"
            href="viber://chat/?number=380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "whatsapp", "label": "messager"}'
            target="_blank"
            href="https://wa.me/380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "telegram", "label": "messager"}'
            target="_blank"
            href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "mail", "label": "messager"}'
            target="_blank"
            href="mailto:kungfu@kungfu.com.ua">
           <span class="contact__text">kungfu@kungfu.com.ua</span>
         </a>
       </div>
-            <div id="divFolowButtons">
-                <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
-                    <img src="/asset/i/youtube.png" alt="Youtube канал"/>
-                </a>
-                <a href="https://vk.com/club21359024" target="_blank">
-                    <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
-                </a>
-                <a href="https://www.facebook.com/profile.php?id=100001753134734" target="_blank">
-                    <img src="/asset/i/fb.png" alt="Страница Facebook"/>
-                </a>
-            </div>
-        </div>
+      <div id="divFolowButtons">
+        <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos"
+           data-action='{"category": "contact", "value": "youtube", "label": "youtube"}'
+           target="_blank">
+          <img src="/asset/i/youtube.png" alt="Youtube канал"/>
+        </a>
+        <a href="https://vk.com/club21359024"
+           data-action='{"category": "contact", "value": "vk", "label": "vk"}'
+           target="_blank">
+          <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=100001753134734"
+           data-action='{"category": "contact", "value": "facebook", "label": "facebook"}'
+           target="_blank">
+          <img src="/asset/i/fb.png" alt="Страница Facebook"/>
+        </a>
+      </div>
     </div>
-    <div class="main">
-        <!--Ramka-->
-        <table id="tBorder" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
-            <tbody>
-            <tr>
-                <td height="76" width="75">
-                    <img src="/asset/i/border_lt.png" height="76" width="75"/>
-                </td>
-                <td class="bordert">
-                </td>
-                <td width="65">
-                    <img src="/asset/i/border_tr.png" height="76" width="65"/>
-                </td>
-            </tr>
-            <tr>
-                <td class="borderleft">
-                    &nbsp;
-                </td>
-                <td class="main">
-                    <div id="menu">
-                        <ul class="menu">
-                            <li><a href="/practice/tai_chi_quan.html"><span>Тайцзицюань</span></a></li>
-                            <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
-                            <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
-                            <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-                            <li><a href="/practice/сhinese_tea_ceremony.html"><span>Чайная церемония</span></a></li>
-                            <li><a href="/article/"><span>Статьи</span></a></li>
-                            <li><a href="/photo/"><span>Фото</span></a></li>
-                        </ul>
-                    </div>
-                    <div id="content">
-                        <h1 class="h1Title">Кунгфу Эмэй Пай</h1>
-                        <p>Китай. Почти две тысячи метров над уровнем моря. Древний
-                            даоский храмовый комплекс разбросанный по склону горы, семь монахов-даосов несущих
-                            традицию древнего знания этого боевого искусства. Впервые меня сюда привозил мой
-                            учитель Фэн Ти Цай. Полагая, что в естественной природной среде и в контакте с непосредственными
-                            носителями традиций этого стиля, мое обучение будет более эффективным. Действительно,
-                            жизнь в среде даосской общины, совместные тренировки, беседы с настоятелем храма,
-                            позволили мне глубоко переосмыслить и понять не только структуру и технологию этого
-                            стиля кунг – фу, но и осознать необходимость занятий. Итак, обучение в стиле Эмэй
-                            проводится сразу в пяти направлениях. Первое – это культура движения. На первом
-                            этапе заучиваются различные комбинации боевых связок, включающие блоки, удары и
-                            смещения. Основная цель - это умение одновременно смещаться наносить удары и блокировать.
-                            Второе направление - это изучение различных техник и упражнений дыхания, которые
-                            позволят значительно увеличить выносливость и способность быстро восстанавливаться
-                            после проведения длинных комбинаций боевых связок. Третье - психотехника, упражнения
-                            на концентрацию и медитативные практики. Четвертое направление – энергетические
-                            техники, позволяющие на начальном этапе научиться чувствовать свою биоэнергию (ци),
-                            а в дальнейшем и управлять ею. И последнее, пятое направление - это применение всех
-                            навыков и умений в бою, который позволяет развить комбинаторное мышление и выработать
-                            стабильное психологическое состояние в экстремальной ситуации. Практикуя стиль Эмэй
-                            вы, постепенно, «прорабатываете» свой организм, достигая состояния устойчивого здоровья
-                            и повышенной мобильности.</p>
-                        <iframe width="750" height="640" src="https://www.youtube.com/embed/m0iq1kh6OWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                </td>
-                <td class="borderright">
-                    &nbsp;
-                </td>
-            </tr>
-            <tr>
-                <td height="82" width="75">
-                    <img src="/asset/i/border_bl.jpg" height="82" width="75"/>
-                </td>
-                <td class="borderb">
-                    &nbsp;
-                </td>
-                <td width="65">
-                    <img src="/asset/i/border_br.jpg" height="82" width="65"/>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <!--End Ramka-->
-    </div>
-    <div class="clear">
-    </div>
+  </div>
+  <div class="main">
+      <!--Ramka-->
+      <table id="tBorder" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
+          <tbody>
+          <tr>
+              <td height="76" width="75">
+                  <img src="/asset/i/border_lt.png" height="76" width="75"/>
+              </td>
+              <td class="bordert">
+              </td>
+              <td width="65">
+                  <img src="/asset/i/border_tr.png" height="76" width="65"/>
+              </td>
+          </tr>
+          <tr>
+              <td class="borderleft">
+                  &nbsp;
+              </td>
+              <td class="main">
+                  <div id="menu">
+                      <ul class="menu">
+                          <li><a href="/practice/tai_chi_quan.html"><span>Тайцзицюань</span></a></li>
+                          <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
+                          <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
+                          <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
+                          <li><a href="/practice/сhinese_tea_ceremony.html"><span>Чайная церемония</span></a></li>
+                          <li><a href="/article/"><span>Статьи</span></a></li>
+                          <li><a href="/photo/"><span>Фото</span></a></li>
+                      </ul>
+                  </div>
+                  <div id="content">
+                      <h1 class="h1Title">Кунгфу Эмэй Пай</h1>
+                      <p>Китай. Почти две тысячи метров над уровнем моря. Древний
+                          даоский храмовый комплекс разбросанный по склону горы, семь монахов-даосов несущих
+                          традицию древнего знания этого боевого искусства. Впервые меня сюда привозил мой
+                          учитель Фэн Ти Цай. Полагая, что в естественной природной среде и в контакте с непосредственными
+                          носителями традиций этого стиля, мое обучение будет более эффективным. Действительно,
+                          жизнь в среде даосской общины, совместные тренировки, беседы с настоятелем храма,
+                          позволили мне глубоко переосмыслить и понять не только структуру и технологию этого
+                          стиля кунг – фу, но и осознать необходимость занятий. Итак, обучение в стиле Эмэй
+                          проводится сразу в пяти направлениях. Первое – это культура движения. На первом
+                          этапе заучиваются различные комбинации боевых связок, включающие блоки, удары и
+                          смещения. Основная цель - это умение одновременно смещаться наносить удары и блокировать.
+                          Второе направление - это изучение различных техник и упражнений дыхания, которые
+                          позволят значительно увеличить выносливость и способность быстро восстанавливаться
+                          после проведения длинных комбинаций боевых связок. Третье - психотехника, упражнения
+                          на концентрацию и медитативные практики. Четвертое направление – энергетические
+                          техники, позволяющие на начальном этапе научиться чувствовать свою биоэнергию (ци),
+                          а в дальнейшем и управлять ею. И последнее, пятое направление - это применение всех
+                          навыков и умений в бою, который позволяет развить комбинаторное мышление и выработать
+                          стабильное психологическое состояние в экстремальной ситуации. Практикуя стиль Эмэй
+                          вы, постепенно, «прорабатываете» свой организм, достигая состояния устойчивого здоровья
+                          и повышенной мобильности.</p>
+                      <iframe width="750" height="640" src="https://www.youtube.com/embed/m0iq1kh6OWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
+              </td>
+              <td class="borderright">
+                  &nbsp;
+              </td>
+          </tr>
+          <tr>
+              <td height="82" width="75">
+                  <img src="/asset/i/border_bl.jpg" height="82" width="75"/>
+              </td>
+              <td class="borderb">
+                  &nbsp;
+              </td>
+              <td width="65">
+                  <img src="/asset/i/border_br.jpg" height="82" width="65"/>
+              </td>
+          </tr>
+          </tbody>
+      </table>
+      <!--End Ramka-->
+  </div>
+  <div class="clear">
 </div>
 <div class="footer">
     <p>
