--- a/article/meditation.html
+++ b/article/meditation.html
@@ -29,56 +29,69 @@
 
     gtag('config', 'UA-29701804-1');
   </script>
+  <script src="/asset/script.js"></script>
 </head>
 <body>
 <div class="pageHeader"></div>
 <div class="page">
-    <div class="header">
-        <div class="title">
-            <h1 class="h1MainTitle">
+  <div class="header">
+    <div class="title">
+      <h1 class="h1MainTitle">
         <a href="/">Харьковский культурный Центр<br/>«Искусства Китая»</a>
       </h1>
       <div class="contact">
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "kyivstar", "label": "phone"}'
            target="_blank"
            href="tel:+380988314892">
           <img src="/asset/i/kyivstar28.png" alt="kyivstar" style="width: 15px"/>
           <span class="contact__text">+38(098)831-48-92</span>
         </a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "vodafone", "label": "phone"}'
            target="_blank"
            href="tel:+380661043335">
           <img src="/asset/i/vodafone28.png" alt="vodafone" style="width: 15px"/>
           <span class="contact__text">+38(066)104-33-35</span>
         </a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "viber", "label": "messager"}'
            target="_blank"
            href="viber://chat/?number=380661043335"><img src="/asset/i/viber32.png" alt="viber"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "whatsapp", "label": "messager"}'
            target="_blank"
            href="https://wa.me/380661043335"><img src="/asset/i/whatsapp32.png" alt="whatsapp"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "telegram", "label": "messager"}'
            target="_blank"
            href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "mail", "label": "messager"}'
            target="_blank"
            href="mailto:kungfu@kungfu.com.ua">
           <span class="contact__text">kungfu@kungfu.com.ua</span>
         </a>
       </div>
-            <div id="divFolowButtons">
-                <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos" target="_blank">
-                    <img src="/asset/i/youtube.png" alt="Youtube канал"/>
-                </a>
-                <a href="https://vk.com/club21359024" target="_blank">
-                    <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
-                </a>
-                <a href="https://www.facebook.com/profile.php?id=100001753134734" target="_blank">
-                    <img src="/asset/i/fb.png" alt="Страница Facebook"/>
-                </a>
-            </div>
-        </div>
+      <div id="divFolowButtons">
+        <a href="https://www.youtube.com/channel/UCCz7eXvOGSqRp6qJdtskkZg/videos"
+           data-action='{"category": "contact", "value": "youtube", "label": "youtube"}'
+           target="_blank">
+          <img src="/asset/i/youtube.png" alt="Youtube канал"/>
+        </a>
+        <a href="https://vk.com/club21359024"
+           data-action='{"category": "contact", "value": "vk", "label": "vk"}'
+           target="_blank">
+          <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=100001753134734"
+           data-action='{"category": "contact", "value": "facebook", "label": "facebook"}'
+           target="_blank">
+          <img src="/asset/i/fb.png" alt="Страница Facebook"/>
+        </a>
+      </div>
     </div>
+  </div>
     <div class="main">
         <!--Ramka-->
         <table id="tBorder" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
