--- a/article/meditation.html
+++ b/article/meditation.html
@@ -185,6 +185,16 @@
                         обновление и новый стимул к жизни.
                     </p>
                     </div>
+                  <div id="disqus_thread"></div>
+                  <script>
+                    (function() {
+                      var d = document, s = d.createElement('script');
+                      s.src = 'https://kungfu-dojo.disqus.com/embed.js';
+                      s.setAttribute('data-timestamp', +new Date());
+                      (d.head || d.body).appendChild(s);
+                    })();
+                  </script>
+                  <noscript>Для комментариев необходим JavaScript</noscript>
                 </td>
                 <td class="borderright">
                     &nbsp;
