--- a/article/symbolism_in_the_martial_arts_of_China.html
+++ b/article/symbolism_in_the_martial_arts_of_China.html
@@ -141,6 +141,16 @@
             </p>
             <p>Все о чем я написал выше, это слова китайских мастеров с которыми я разговаривал по вечерам за чашкой рисового вина, может их мнение субъективно, я всего лишь проводник между Востоком и Западом и не берусь судить.</p>
           </div>
+          <div id="disqus_thread"></div>
+          <script>
+            (function() {
+              var d = document, s = d.createElement('script');
+              s.src = 'https://kungfu-dojo.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Для комментариев необходим JavaScript</noscript>
         </td>
         <td class="borderright">
           &nbsp;
