--- a/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
+++ b/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
@@ -150,6 +150,16 @@
               «Нет конечно, ведь они не знают китайского языка, и никогда не о чем меня не спрашивают, многие иностранцы приезжают в Китай со своими представлениями о боевых искусствах мы учим их в русле их представлений и они уезжают довольные».
             </p>
           </div>
+          <div id="disqus_thread"></div>
+          <script>
+            (function() {
+              var d = document, s = d.createElement('script');
+              s.src = 'https://kungfu-dojo.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Для комментариев необходим JavaScript</noscript>
         </td>
         <td class="borderright">
           &nbsp;
