--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
       <tbody>
       <tr>
         <td height="76" width="75">
-          <img src="/asset/i/border_lt.png" height="76" width="75"/>
+          <img src="/asset/i/border_lt.png" height="76" width="75" alt="*"/>
         </td>
         <td class="bordert">
         </td>
         <td width="65">
-          <img src="/asset/i/border_tr.png" height="76" width="65"/>
+          <img src="/asset/i/border_tr.png" height="76" width="65" alt="*"/>
         </td>
       </tr>
       <tr>
@@ -129,7 +129,7 @@
                 <table style="width: 100%;">
                   <tr>
                     <td style="width: 125px; vertical-align:top;">
-                      <img src="asset/i/kungfulogo.png" width="120px"/>
+                      <img src="asset/i/kungfulogo.png" width="120px" alt="*"/>
                     </td>
                     <td align="center">
                       <div data-allowfullscreen="native"
@@ -137,7 +137,7 @@
                            data-nav="thumbs"
                            data-loop="true"
                            class="fotorama">
-                        <a href="/photo/main/IMG_2683.jpg" target="_blank"><img src="/photo/main/small/IMG_2683.jpg"></a>
+                        <a href="/photo/main/IMG_2683.jpg" target="_blank"><img src="/photo/main/small/IMG_2683.jpg" alt="мастер"></a>
                         <a href="/photo/main/IMG_2928.jpg" data-thumb="/photo/main/small/IMG_2928.jpg" target="_blank"></a>
                         <a href="/photo/main/IMG_2793.jpg" data-thumb="/photo/main/small/IMG_2793.jpg" target="_blank"></a>
                         <a href="/photo/china/1.jpg" data-thumb="/photo/china/1.jpg" target="_blank"></a>
@@ -598,7 +598,7 @@
                       </div>
                     </td>
                     <td style="width: 125px; vertical-align:top;">
-                      <img src="asset/i/kungfulogo.png" width="120px"/>
+                      <img src="asset/i/kungfulogo.png" width="120px" alt="*"/>
                     </td>
                   </tr>
                 </table>
@@ -626,13 +626,13 @@
       </tr>
       <tr>
         <td height="82" width="75">
-          <img src="/asset/i/border_bl.jpg" height="82" width="75"/>
+          <img src="/asset/i/border_bl.jpg" height="82" width="75" alt="*"/>
         </td>
         <td class="borderb">
           &nbsp;
         </td>
         <td width="65">
-          <img src="/asset/i/border_br.jpg" height="82" width="65"/>
+          <img src="/asset/i/border_br.jpg" height="82" width="65" alt="*"/>
         </td>
       </tr>
       </tbody>
