--- a/practice/index.html
+++ b/practice/index.html
@@ -99,12 +99,12 @@
       <tbody>
       <tr>
         <td height="76" width="75">
-          <img src="/asset/i/border_lt.png" height="76" width="75"/>
+          <img src="/asset/i/border_lt.png" height="76" width="75" alt="*"/>
         </td>
         <td class="bordert">
         </td>
         <td width="65">
-          <img src="/asset/i/border_tr.png" height="76" width="65"/>
+          <img src="/asset/i/border_tr.png" height="76" width="65" alt="*"/>
         </td>
       </tr>
       <tr>
@@ -139,13 +139,13 @@
       </tr>
       <tr>
         <td height="82" width="75">
-          <img src="/asset/i/border_bl.jpg" height="82" width="75"/>
+          <img src="/asset/i/border_bl.jpg" height="82" width="75" alt="*"/>
         </td>
         <td class="borderb">
           &nbsp;
         </td>
         <td width="65">
-          <img src="/asset/i/border_br.jpg" height="82" width="65"/>
+          <img src="/asset/i/border_br.jpg" height="82" width="65" alt="*"/>
         </td>
       </tr>
       </tbody>
