--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <table style="width: 100%;">
                   <tr>
                     <td style="width: 125px; vertical-align:top;">
-                      <img src="asset/i/kungfulogo.png" width="120px" alt="*"/>
+                      <img src="asset/i/kungfulogo.png" width="120" alt="*"/>
                     </td>
                     <td align="center">
                       <div data-allowfullscreen="native"
@@ -598,7 +598,7 @@
                       </div>
                     </td>
                     <td style="width: 125px; vertical-align:top;">
-                      <img src="asset/i/kungfulogo.png" width="120px" alt="*"/>
+                      <img src="asset/i/kungfulogo.png" width="120" alt="*"/>
                     </td>
                   </tr>
                 </table>
